@@ -3,6 +3,7 @@
 1.302079  2017-04-03 12:12:02-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Fixes for '. in @INC' changes (#768)
+    - Timeout when waiting for child procs and threads (#765)
 
 1.302078  2017-03-01 15:24:12-08:00 America/Los_Angeles
 
